--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 # Required
-BOT_TOKEN = ""
-API_HASH = ""
-API_ID = ""
-AUTH_CHATS = "" # Separate multiple ids by space and : for topic_ids
+BOT_TOKEN = "5883566177:AAHDQ_bkIDAbYyw1qxG0P-bL1S2CyOXaDOk"
+API_HASH = "064100a1cb729dfb0436aaee64fd9d58"
+API_ID = "19517098"
+AUTH_CHATS = "-1001932630522 -1001819913889" # Separate multiple ids by space and : for topic_ids
 
 # Optional
-AUTO_BYPASS = ""
-OWNER_ID = "" # For personal use & Logs
+AUTO_BYPASS = "false"
+OWNER_ID = "1769132732" # For personal use & Logs
 LARAVEL_SESSION = ""
 XSRF_TOKEN = ""
 GDTOT_CRYPT = ""
@@ -14,8 +14,8 @@ HUBDRIVE_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
 KATDRIVE_CRYPT = ""
 UPTOBOX_TOKEN = ""
-DIRECT_INDEX = ""
-TERA_COOKIE = ""
+DIRECT_INDEX = "True"
+TERA_COOKIE = "True"
 
 # Update
 UPSTREAM_REPO = "https://github.com/SilentDemonSD/FZBypassBot"
