--- a/config.env
+++ b/config.env
@@ -9,13 +9,13 @@ AUTO_BYPASS = "false"
 OWNER_ID = "1769132732" # For personal use & Logs
 LARAVEL_SESSION = ""
 XSRF_TOKEN = ""
-GDTOT_CRYPT = "YWVFSmcyYWplRVBVdHMxeFI1dCt5UGpFbm0wSG9mQmJZazZ3cGd5V3QyUT0%3D"
+GDTOT_CRYPT = ""
 HUBDRIVE_CRYPT = "YWVFSmcyYWplRVBVdHMxeFI1dCt5UGpFbm0wSG9mQmJZazZ3cGd5V3QyUT0%3D"
 DRIVEFIRE_CRYPT = "cnhXOGVQNVlpeFZlM2lvTmN6Z2FPVWJiSjVBbWdVN0dWOEpvR3hHbHFLVT0%3D"
 KATDRIVE_CRYPT = "bzQySHVKSkY0bEczZHlqOWRsSHZCazBkOGFDak9HWXc1emRTL1F6Rm9ubz0%3"
 UPTOBOX_TOKEN = "4a4ecf35552fea876da1d63e7fd000d2cb2fo"
 DIRECT_INDEX = ""
-TERA_COOKIE = "YQOR7exteHuiC7XNl_TAD_ZaXGexSokJJwoblC4S"
+TERA_COOKIE = ""
 
 # Update
 UPSTREAM_REPO = "https://github.com/SPARKBRO/BypassFixCode"
